# kg

./: .gitignore  BUILD.bazel  README.md  WORKSPACE  variables.bzl
src/arcanity/: BUILD.bazel  Dockerfile  __main__.py  gazelle_python.yaml  kubernetes.yaml  main.py  requirements.in  requirements.txt  requirements_lock.txt
src/arcanity/info/: __init__.py  triples.py
src/necronomicon/: Program.cs  necronomicon.csproj  ner.csproj  values.yaml
src/necronomicon/Controllers/: DocumentController.cs
src/necronomicon/Models/: Document.cs  IRepository.cs
src/necronomicon/Properties/: launchSettings.json
src/necronomicon/Services/: DocumentStoreService.cs  EntityMapper.cs  Errors.cs  Hash.cs  LanguageGraph.cs  NLPService.cs  Objects.cs  PartOfSpeechTypes.cs
src/schemas/: BUILD.bazel
src/schemas/core/v1/: BUILD.bazel  thing.proto
